# durum

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: ai_client.py  bot.py  checklist_data.py  checklists.py  close_wizard.py  config.py  dashboard.py  dashboard_service.py  db.py  db_schema.py  handlers.py  logging_setup.py  orders.py  reminders.py  report_builder.py  reports.py  units_config.py
app/checklist/: __init__.py  callbacks.py  config.yaml  data.py  ui.py
app/dashboard/: __init__.py  employees_service.py  service.py  web.py
app/dashboard/static/: dashboard.js  style.css
app/dashboard/templates/: base.html  dashboard.html  employees.html  login.html
app/handlers/: __init__.py  ai.py  constants.py  misc.py  orders.py  reports.py  shift.py  shift_checklist.py  states.py  stock.py  utils.py
app/static/: dashboard.js
camera_sync/: .xiaomi_session.json  all_devices.json  explore.py  explore2.py  requirements.txt  step1_send_code.py  step2_verify.py  sync_to_db.py  xiaomi_cloud.py
docs/: architecture.md
