[tool.poetry]
name = "durum-bot"
version = "0.1.0"
description = "Telegram bot for durum shop operations."
authors = ["Durum Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
aiogram = "^3.7.0"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.1"
fastapi = "^0.121.0"
uvicorn = {version = "^0.38.0", extras = ["standard"]}
jinja2 = "^3.1.6"
pyyaml = "^6.0.2"
python-multipart = "^0.0.9"
aiohttp-socks = "^0.8.4"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
